--- a/regioes.html
+++ b/regioes.html
@@ -127,7 +127,7 @@
                 <p>1° Geração</p>
             </div>
             <div class="regiao">
-                <img src="https://example.com/johto-banner.jpg" alt="Banner de Johto">
+                <img src="https://i.pinimg.com/1200x/d5/6b/4b/d56b4b68a99dc93e964349deec48e7f2.jpg" alt="Banner de Johto">
                 <h2><a href="https://pokemon.fandom.com/wiki/Johto">Região de Johto</a></h2>
                 <p>2° Geração</p>
             </div>
