--- a/regioes.html
+++ b/regioes.html
@@ -132,7 +132,7 @@
                 <p>2° Geração</p>
             </div>
             <div class="regiao">
-                <img src="https://example.com/hoenn-banner.jpg" alt="Banner de Hoenn">
+                <img src="https://i.pinimg.com/1200x/60/54/36/6054366a67464872d6b114ee888a43bb.jpg" alt="Banner de Hoenn">
                 <h2><a href="https://pokemon.fandom.com/wiki/Hoenn">Região de Hoenn</a></h2>
                 <p>3° Geração</p>
             </div>
