--- a/regioes.html
+++ b/regioes.html
@@ -137,7 +137,7 @@
                 <p>3° Geração</p>
             </div>
             <div class="regiao">
-                <img src="https://example.com/sinnoh-banner.jpg" alt="Banner de Sinnoh">
+                <img src="https://i.pinimg.com/1200x/39/ba/cf/39bacfce62f70ae61656239f76e70c6e.jpg" alt="Banner de Sinnoh">
                 <h2><a href="https://pokemon.fandom.com/wiki/Sinnoh">Região de Sinnoh</a></h2>
                 <p>4° Geração</p>
             </div>
