--- a/regioes.html
+++ b/regioes.html
@@ -92,6 +92,14 @@
             z-index: 0; /* Coloca a imagem abaixo do texto */
         }
 
+        /* Links dentro de .regiao */
+        .regiao a {
+            position: relative;
+            z-index: 2; /* Garante que o link fique acima do banner */
+            color: #fff; /* Cor do link */
+            text-decoration: none;
+        }
+
         footer {
             background-color: #333;
             color: white;
@@ -122,12 +130,12 @@
         <h1>Todas as Regiões</h1>
         <div class="regioes">
             <div class="regiao">
-                <img src="https://i.pinimg.com/1200x/e0/08/66/e0086621332479599e0cd47e2d73cae4.jpg" alt="Banner de Kanto">
+                <img src="https://i.pinimg.com/736x/de/a7/54/dea7549a11c4e36a64906b9334710fe9.jpg" alt="Banner de Kanto">
                 <h2><a href="https://pokemon.fandom.com/wiki/Kanto">Região de Kanto</a></h2>
                 <p>1° Geração</p>
             </div>
             <div class="regiao">
-                <img src="https://i.pinimg.com/1200x/d5/6b/4b/d56b4b68a99dc93e964349deec48e7f2.jpg" alt="Banner de Johto">
+                <img src="https://i.pinimg.com/1200x/38/36/22/383622059edf18ad86cc78c359e59bdf.jpg" alt="Banner de Johto">
                 <h2><a href="https://pokemon.fandom.com/wiki/Johto">Região de Johto</a></h2>
                 <p>2° Geração</p>
             </div>
@@ -142,7 +150,7 @@
                 <p>4° Geração</p>
             </div>
             <div class="regiao">
-                <img src="https://example.com/unova-banner.jpg" alt="Banner de Unova">
+                <img src="https://i.pinimg.com/1200x/ea/80/ec/ea80ec3bad8a0485f6b51c5a08e0bb72.jpg" alt="Banner de Unova">
                 <h2><a href="https://pokemon.fandom.com/wiki/Unova">Região de Unova</a></h2>
                 <p>5° Geração</p>
             </div>
