--- a/regioes.html
+++ b/regioes.html
@@ -155,7 +155,7 @@
                 <p>5° Geração</p>
             </div>
             <div class="regiao">
-                <img src="https://example.com/kalos-banner.jpg" alt="Banner de Kalos">
+                <img src="https://i.pinimg.com/736x/34/2a/e2/342ae2d2460d299c5a9e77e10a2dc14e.jpg" alt="Banner de Kalos">
                 <h2><a href="https://pokemon.fandom.com/wiki/Kalos">Região de Kalos</a></h2>
                 <p>6° Geração</p>
             </div>
