--- a/regioes.html
+++ b/regioes.html
@@ -160,7 +160,7 @@
                 <p>6° Geração</p>
             </div>
             <div class="regiao">
-                <img src="https://example.com/alola-banner.jpg" alt="Banner de Alola">
+                <img src="https://i.pinimg.com/1200x/bd/81/98/bd819890487a8a6c3a7863a2c69c3188.jpg" alt="Banner de Alola">
                 <h2><a href="https://pokemon.fandom.com/wiki/Alola">Região de Alola</a></h2>
                 <p>7° Geração</p>
             </div>
