--- a/regioes.html
+++ b/regioes.html
@@ -165,7 +165,7 @@
                 <p>7° Geração</p>
             </div>
             <div class="regiao">
-                <img src="https://example.com/galar-banner.jpg" alt="Banner de Galar">
+                <img src="https://i.pinimg.com/1200x/5f/22/3b/5f223badf72a1256a78c5323f7229ff4.jpg" alt="Banner de Galar">
                 <h2><a href="https://pokemon.fandom.com/wiki/Galar">Região de Galar</a></h2>
                 <p>8° Geração</p>
             </div>
