--- a/regioes.html
+++ b/regioes.html
@@ -170,7 +170,7 @@
                 <p>8° Geração</p>
             </div>
             <div class="regiao">
-                <img src="https://example.com/paldea-banner.jpg" alt="Banner de Paldea">
+                <img src="https://i.pinimg.com/1200x/7b/6f/f8/7b6ff84c3470062bc52cd70396a5ec8b.jpg" alt="Banner de Paldea">
                 <h2><a href="https://pokemon.fandom.com/wiki/Paldea">Região de Paldea</a></h2>
                 <p>9° Geração</p>
             </div>
