--- a/pokedex.html
+++ b/pokedex.html
@@ -25,7 +25,7 @@
         <h1>Busca pelo Pokémon</h1>
         <form class="contato-form" action="https://script.google.com/macros/s/AKfycbwM_dTarvA-uBOuYMH5XD3vUfaozq6yvySdGwT2gIx-VlTJ1MHX3plFravgh0DZm5st/exec" method="POST">
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" placeholder="Digite o nome do Pokémon desejado" required>
+            <input type="text" id="pokemon" name="pokemon" placeholder="Digite o nome do Pokémon desejado" required>
 
             <button type="submit">Enviar</button>
         </form>
