--- a/planilha.html
+++ b/planilha.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="ENG-UK">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Registros da Planilha</title>
+    <title>Visits</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
