--- a/planilha.html
+++ b/planilha.html
@@ -26,7 +26,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Locadora IFPR</p>
+        <p>&copy;© 1918 - 1945 Gas Masks</p>
     </footer>
 
     <script>
