--- a/filias.html
+++ b/filias.html
@@ -17,7 +17,7 @@
             <a href="index.html">Initiation</a>
             <a href="filiais.html">World war masks</a>
             <a href="contato.html">Contact</a>
-            <a href="planilha.html">Visitas</a>
+            <a href="planilha.html">Visits</a>
         </nav>
     </header>
 
