--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="index.html">Initiation</a>
             <a href="filias.html">World war masks</a>
             <a href="contato.html">Contact</a>
-            <a href="planilha.html">Visitas</a>
+            <a href="planilha.html">Visits</a>
         </nav>
     </header>
 
