--- a/planilha.html
+++ b/planilha.html
@@ -15,7 +15,7 @@
             <a href="index.html">Início</a>
             <a href="filiais.html">Filiais</a>
             <a href="contato.html">Contato</a>
-            <a href="planilha.html" aria-current="page">Planilha</a>
+            <a href="planilha.html">Visits</a>
         </nav>
     </header>
 
