--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="index.html">Início</a>
             <a href="regioes.html">Regiões</a>
             <a href="pokedex.html">Pokedex</a>
+            <a href="planilha.html"> Pokemons Pesquisados</a>
         </nav>
     </header>
 
