--- a/planilha.html
+++ b/planilha.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <h1>Registros do Formulário</h1>
+        <h1>Register of visitors</h1>
         <div id="mensagem" class="info-msg">Carregando...</div>
         <div class="table-wrap" id="table-wrap"></div>
     </main>
