--- a/planilha.html
+++ b/planilha.html
@@ -13,8 +13,8 @@
         <h2>Locadora IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
-            <a href="filiais.html">Filiais</a>
-            <a href="contato.html">Contato</a>
+            <a href="regioes.html">Regiões</a>
+            <a href="pokedex.html">Pokedex</a>
             <a href="planilha.html" aria-current="page">Planilha</a>
         </nav>
     </header>
