--- a/planilha.html
+++ b/planilha.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h2>Locadora IFPR</h2>
+        <h2>Pokémon IFPR</h2>
         <nav>
             <a href="index.html">Início</a>
             <a href="regioes.html">Regiões</a>
