--- a/planilha.html
+++ b/planilha.html
@@ -12,7 +12,7 @@
     <header>
         <h2>Locadora IFPR</h2>
         <nav>
-            <a href="index.html">Início</a>
+            <a href="index.html">Initiation</a>
             <a href="filiais.html">World war masks</a>
             <a href="contato.html">Contato</a>
             <a href="planilha.html">Visits</a>
