--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <!-- Conteúdo principal -->
     <main>
   <h1>Bem-vindo à Locadora de Veículos</h1>
-  <p>Encontre o carro ideal para sua viagem, trabalho ou lazer.</p>
+  <p>Wait here and stay safe in your bomb shelter and wait till the bombers stop.</p>
 
   <div id="conteudo" class="conteudo-scroll">
-    <p>Carregando conteúdo...</p>
+    <p>Deliverying information</p>
   </div>
 </main>
 
