--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Conteúdo principal -->
     <main>
-  <h1>Bem-vindo à Locadora de Veículos</h1>
+  <h1>welcome to World war masks site</h1>
   <p>Wait here and stay safe in your bomb shelter and wait till the bombers stop.</p>
 
   <div id="conteudo" class="conteudo-scroll">
