--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Conteúdo principal -->
     <main>
-  <h1>Welcome to World war gas masks (site)</h1>
+  <h1>Welcome to World war gas masks, here you can find what you need </h1>
   <p>Wait here and stay safe in your bomb shelter and wait till the bombers stop.</p>
 
   <div id="conteudo" class="conteudo-scroll">
