--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <script>
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxtzO2bbo5S0KBH3Hl-phPqcKcmpowDo1KFPxmTFLoX4wUvn45xf03vV8mHYm1V_7Wf/exec"
 async function carregarConteudo() {
-  const container = document.getElementById('conteudo');
-  container.innerHTML = "<p>Carregando conteúdo...</p>";
+  const container = document.getElementById('Information');
+  container.innerHTML = "<p>Transporting information...</p>";
 
   try {
     const res = await fetch(SCRIPT_URL);
