--- a/index.html
+++ b/index.html
@@ -59,28 +59,73 @@
 
 <div id="conteudo"></div>
 
+<style>
+  .bloco-item {
+    display: inline-block;
+    text-align: center;
+    margin: 15px;
+    padding: 10px;
+    border-radius: 12px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+    transition: transform 0.2s;
+  }
+
+  .bloco-item:hover {
+    transform: scale(1.05);
+  }
+
+  .pokemon-nome {
+    font-weight: bold;
+    margin-top: 8px;
+    font-size: 1.1em;
+  }
+
+  .tipo-container {
+    display: flex;
+    justify-content: center;
+    gap: 6px;
+    margin-top: 6px;
+    flex-wrap: wrap;
+  }
+
+  .tipo {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    padding: 4px 8px;
+    border-radius: 10px;
+    color: white;
+    font-size: 0.9em;
+    font-weight: bold;
+  }
+</style>
+
+<div id="conteudo"></div>
+
 <script>
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzohiPhWabHPixQ-NvMlpNzbXy_QDvlYUDysw6qn4e5bMMalOVMhNOarOmOQWaVQecr/exec";
 
-// Dicionário com cores e ícones de tipo
+// Dicionário com cores e ícones dos tipos
 const tiposPokemon = {
-  fogo:    { cor: "#EE8130", icone: "🔥" },
-  agua:    { cor: "#6390F0", icone: "💧" },
-  planta:  { cor: "#7AC74C", icone: "🌿" },
-  eletrico:{ cor: "#F7D02C", icone: "⚡" },
-  psiquico:{ cor: "#F95587", icone: "🔮" },
-  gelo:    { cor: "#96D9D6", icone: "❄️" },
-  dragao:  { cor: "#6F35FC", icone: "🐉" },
-  noturno: { cor: "#705746", icone: "🌑" },
-  fada:    { cor: "#D685AD", icone: "✨" },
-  lutador: { cor: "#C22E28", icone: "🥊" },
-  venenoso:{ cor: "#A33EA1", icone: "☠️" },
+  fogo:     { cor: "#EE8130", icone: "🔥" },
+  agua:     { cor: "#6390F0", icone: "💧" },
+  planta:   { cor: "#7AC74C", icone: "🌿" },
+  eletrico: { cor: "#F7D02C", icone: "⚡" },
+  psiquico: { cor: "#F95587", icone: "🔮" },
+  gelo:     { cor: "#96D9D6", icone: "❄️" },
+  dragao:   { cor: "#6F35FC", icone: "🐉" },
+  noturno:  { cor: "#705746", icone: "🌑" },
+  fada:     { cor: "#D685AD", icone: "✨" },
+  lutador:  { cor: "#C22E28", icone: "🥊" },
+  venenoso: { cor: "#A33EA1", icone: "☠️" },
   terrestre:{ cor: "#E2BF65", icone: "🌍" },
-  pedra:   { cor: "#B6A136", icone: "🪨" },
-  fantasma:{ cor: "#735797", icone: "👻" },
-  inseto:  { cor: "#A6B91A", icone: "🐛" },
-  aco:     { cor: "#B7B7CE", icone: "⚙️" },
-  normal:  { cor: "#A8A77A", icone: "⚪" }
+  pedra:    { cor: "#B6A136", icone: "🪨" },
+  fantasma: { cor: "#735797", icone: "👻" },
+  inseto:   { cor: "#A6B91A", icone: "🐛" },
+  aco:      { cor: "#B7B7CE", icone: "⚙️" },
+  normal:   { cor: "#A8A77A", icone: "⚪" },
+  voador:   { cor: "#A98FF3", icone: "🌬️" }
 };
 
 async function carregarConteudo() {
@@ -96,7 +141,7 @@ async function carregarConteudo() {
       const bloco = document.createElement('div');
       bloco.className = 'bloco-item';
 
-      // Cria a imagem
+      // --- IMAGEM ---
       if (item.Url && item.Url.startsWith('http') && item.Url.match(/\.(jpg|jpeg|png|gif|webp)$/i)) {
         const img = document.createElement('img');
         img.src = item.Url;
@@ -105,22 +150,28 @@ async function carregarConteudo() {
         bloco.appendChild(img);
       }
 
-      // Nome do Pokémon abaixo da imagem
+      // --- NOME DO POKÉMON ---
       const nome = document.createElement('div');
       nome.className = 'pokemon-nome';
       nome.textContent = item.Título || 'Pokémon';
       bloco.appendChild(nome);
 
-      // Tipagem (cor e símbolo)
+      // --- TIPAGEM ---
       if (item.Tipo) {
-        const tipo = item.Tipo.toLowerCase();
-        const info = tiposPokemon[tipo] || { cor: '#888', icone: '❓' };
+        const tipos = item.Tipo.split(/[\/,]/).map(t => t.trim().toLowerCase());
+        const tipoContainer = document.createElement('div');
+        tipoContainer.className = 'tipo-container';
 
-        const tipoDiv = document.createElement('div');
-        tipoDiv.className = 'tipo';
-        tipoDiv.style.backgroundColor = info.cor;
-        tipoDiv.innerHTML = `${info.icone} ${item.Tipo}`;
-        bloco.appendChild(tipoDiv);
+        tipos.forEach(tipoNome => {
+          const info = tiposPokemon[tipoNome] || { cor: '#888', icone: '❓' };
+          const tipoDiv = document.createElement('div');
+          tipoDiv.className = 'tipo';
+          tipoDiv.style.backgroundColor = info.cor;
+          tipoDiv.innerHTML = `${info.icone} ${tipoNome.charAt(0).toUpperCase() + tipoNome.slice(1)}`;
+          tipoContainer.appendChild(tipoDiv);
+        });
+
+        bloco.appendChild(tipoContainer);
       }
 
       container.appendChild(bloco);
@@ -132,6 +183,7 @@ async function carregarConteudo() {
 
 carregarConteudo();
 </script>
+
 
     <!-- Rodapé -->
     <footer>
