--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <script>
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxEKFLH7hGCPrxds5xLDxaw4BBEj7DFxKUNNgqH7evJN5FkVGFznlLyjzK0YjTUJlHJ/exec"
 async function carregarConteudo() {
-  const container = document.getElementById('Information');
+  const container = document.getElementById('conteudo');
   container.innerHTML = "<p>Transporting information...</p>";
 
   try {
