--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <!-- Conteúdo principal -->
 <main>
   <h1>Bem-vindo à Locadora de Veículos</h1>
-  <p>Encontre o carro ideal para sua viagem, trabalho ou lazer.</p>
+  <p>Welcome to world war gas mask, here you can find all the information you need</p>
 
   <div id="conteudo" class="conteudo-scroll">
-    <p>Carregando conteúdo...</p>
+    <p>Transporting information...</p>
   </div>
 </main>
 
@@ -35,7 +35,7 @@
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxEKFLH7hGCPrxds5xLDxaw4BBEj7DFxKUNNgqH7evJN5FkVGFznlLyjzK0YjTUJlHJ/exec"; // substitua pela URL do seu Apps Script
 async function carregarConteudo() {
   const container = document.getElementById('conteudo');
-  container.innerHTML = "<p>Carregando conteúdo...</p>";
+  container.innerHTML = "<p>Transporting information</p>";
 
   try {
     const res = await fetch(SCRIPT_URL);
@@ -71,7 +71,7 @@ async function carregarConteudo() {
       container.appendChild(bloco);
     });
   } catch (err) {
-    container.innerHTML = "<p>Erro ao carregar dados: " + err.message + "</p>";
+    container.innerHTML = "<p>Failed to transport information " + err.message + "</p>";
   }
 }
 
