--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!-- Conteúdo principal -->
 <main>
-  <h1>Bem-vindo à Locadora de Veículos</h1>
-  <p>Welcome to world war gas mask, here you can find all the information you need</p>
+  <h1>Welcome to world war gas mask</h1>
+  <p>Here you can find all the information you need</p>
 
   <div id="conteudo" class="conteudo-scroll">
     <p>Transporting information...</p>
