--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ async function carregarConteudo() {
       descricao.textContent = item.Descrição || '';
       bloco.appendChild(descricao);
 
- if (item.Url && item.Url.startsWith('http')) {
+if (item.Url && item.Url.startsWith('http')) {
   const youtubeRegex = /(?:youtube\.com\/watch\?v=|youtu\.be\/)([a-zA-Z0-9_-]+)/;
 
   const match = item.Url.match(youtubeRegex);
@@ -72,6 +72,13 @@ async function carregarConteudo() {
     img.alt = item.Título || 'Imagem';
     bloco.appendChild(img);
   }
+  else {
+    const link = document.createElement('a');
+    link.href = item.Url;
+    link.textContent = 'Ver mais';
+    bloco.appendChild(link);
+  }
+}
   else {
     const link = document.createElement('a');
     link.href = item.Url;
