--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ async function carregarConteudo() {
     const videoId = match[1];
     const iframe = document.createElement('iframe');
     iframe.src = `https://www.youtube.com/embed/${videoId}`;
-    iframe.width = "100%";
+    iframe.width = "1000";
     iframe.height = "1000";
     iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture";
     iframe.setAttribute("allowfullscreen", true);
